--- a/chat.html
+++ b/chat.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Memepedia AI Chatbot</title>
-  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
+  <title>Memepedia Chat</title>
+    <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -108,78 +108,98 @@
 </head>
 <body>
   <header>
-    <h1>Memepedia AI Chatbot</h1>
+    <h1>Memepedia Chat</h1>
     <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo">
   </header>
   <main>
+  
+  <a href="index" class="button">Back to Home</a>
     <div class="chat-container">
-      <div class="messages-container" id="messages"></div>
+      <div class="messages-container" id="messagesContainer"></div>
       <div class="input-container">
-        <input type="text" id="userMessage" placeholder="Type your message here...">
-        <button onclick="sendMessage()" class="button">Send</button>
+        <input type="text" id="memeInput" placeholder="Type your meme here...">
+        <button id="sendMeme" class="button">Send Meme</button>
       </div>
-      <div id="loading" class="loading" style="display:none;">Bot is typing...</div>
     </div>
   </main>
+  
+    <h2>This page is linked to the #general section of the discord server</h2>
+	
+	<br> <br>
+  
   <footer>
     Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
   </footer>
-
   <script>
-    const messagesContainer = document.getElementById('messages');
-    const userMessageInput = document.getElementById('userMessage');
-    const loadingIndicator = document.getElementById('loading');
-
-    async function sendMessage() {
-        const userMessage = userMessageInput.value.trim();
-        if (userMessage) {
-            appendMessage(userMessage, 'user');
-            userMessageInput.value = '';
-            loadingIndicator.style.display = 'block';
-
-            try {
-                const response = await fetch('https://memepedia-backend.vercel.app/api/gemini-chat', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ message: userMessage })
-                });
-                const data = await response.json();
-                
-                if (data.error) {
-                    appendMessage('Something went wrong. Try again later.', 'bot');
-                } else {
-                    appendMessage(data.reply, 'bot');
-                }
-            } catch (error) {
-                appendMessage('Something went wrong. Try again later.', 'bot');
-                console.error('Error:', error);
-            } finally {
-                loadingIndicator.style.display = 'none';
-            }
+    async function fetchMessages() {
+      try {
+        const response = await fetch('https://memepedia-backend.vercel.app/api/get-latest-messages');
+        if (!response.ok) {
+          throw new Error(`Error fetching messages: ${response.statusText}`);
         }
+        const data = await response.json();
+        let messages = [];
+        if (data && Array.isArray(data.messages)) {
+          messages = data.messages;
+        } else if (Array.isArray(data)) {
+          messages = data;
+        } else {
+          console.error('Received invalid message format:', data);
+          const messagesContainer = document.getElementById('messagesContainer');
+          if (messagesContainer) {
+            messagesContainer.innerHTML = 'No messages available';
+          }
+          return;
+        }
+        const messagesContainer = document.getElementById('messagesContainer');
+        if (!messagesContainer) {
+          console.error('Messages container not found!');
+          return;
+        }
+        messagesContainer.innerHTML = ''; // Clear existing messages
+        messages.forEach((message) => {
+          const messageElement = document.createElement('div');
+          messageElement.classList.add('message');
+          // Determine author name safely
+          const authorName = message.author?.username || message.author || 'Unknown';
+          const content = message.content || '';
+          messageElement.innerHTML = `<span class="author">${authorName}</span>: <span class="content">${content}</span>`;
+          messagesContainer.appendChild(messageElement);
+        });
+      } catch (error) {
+        console.error('Error fetching messages:', error);
+        const messagesContainer = document.getElementById('messagesContainer');
+        if (messagesContainer) {
+          messagesContainer.innerHTML = 'Failed to fetch messages';
+        }
+      }
     }
-
-    function appendMessage(message, sender) {
-        const messageElement = document.createElement('div');
-        messageElement.classList.add('message');
-        messageElement.classList.add(sender === 'user' ? 'user-message' : 'bot-message');
-        
-        const author = document.createElement('div');
-        author.classList.add('author');
-        author.textContent = sender === 'user' ? 'You' : ':memepedia bot:';
-
-        const content = document.createElement('div');
-        content.classList.add('content');
-        content.textContent = message;
-
-        messageElement.appendChild(author);
-        messageElement.appendChild(content);
-
-        messagesContainer.appendChild(messageElement);
-        messagesContainer.scrollTop = messagesContainer.scrollHeight;  // Auto scroll to latest message
-    }
+    document.getElementById('sendMeme').addEventListener('click', async () => {
+      const memeInput = document.getElementById('memeInput');
+      const memeContent = memeInput.value.trim();
+      if (memeContent) {
+        try {
+          const response = await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ content: memeContent })
+          });
+          if (response.ok) {
+            memeInput.value = ''; // Clear input on success
+            fetchMessages(); // Optionally refresh messages immediately
+          } else {
+            console.error('Failed to send meme');
+          }
+        } catch (error) {
+          console.error('Error sending meme:', error);
+        }
+      }
+    });
+    // Initial fetch and periodic updates
+    fetchMessages();
+    setInterval(fetchMessages, 2000);
   </script>
 </body>
 </html>
