--- a/chatbot.html
+++ b/chatbot.html
@@ -1,131 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MEMEPEDIA AI Chatbot</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Memepedia AI Chatbot</title>
+  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
   <style>
     body {
-      background-color: #0e0e0e;
-      color: #e0e0e0;
       font-family: 'Arial', sans-serif;
+      background-color: #000000;
+      color: #ffffff;
       margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      color: #00fff7;
+      padding: 0;
       text-align: center;
-      text-shadow: 0 0 8px #00fff7;
     }
-
-    #chat {
-      border: 2px solid #00fff7;
-      border-radius: 10px;
-      padding: 15px;
-      background-color: #1a1a1a;
-      max-width: 700px;
-      margin: 0 auto 20px auto;
-      height: 400px;
-      overflow-y: auto;
-      box-shadow: 0 0 15px #00fff7;
+    header {
+      background-color: #cc5500;
+      color: #ffffff;
+      padding: 20px 0;
     }
-
-    .message {
+    header img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
       margin-bottom: 10px;
     }
-
-    .user {
-      color: #00bfff;
+    main {
+      padding: 30px;
     }
-
-    .bot {
-      color: #00ff7f;
+    .button {
+      display: inline-block;
+      background-color: #cc5500;
+      color: white;
+      padding: 15px 25px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: background-color 0.3s;
     }
-
-    #inputArea {
+    .button:hover {
+      background-color: #b34700;
+    }
+    .chat-container {
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #222222;
+      border-radius: 8px;
+      width: 80%;
+      box-sizing: border-box;
+    }
+    .messages-container {
+      margin-bottom: 20px;
+      max-height: 400px;
+      overflow-y: auto;
+      background-color: #333333;
+      padding: 15px;
+      border-radius: 8px;
+    }
+    .message {
+      background-color: #444444;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      padding: 10px;
+    }
+    .message .author {
+      color: #cc5500;
+      font-weight: bold;
+    }
+    .message .content {
+      color: #ffffff;
+    }
+    .input-container {
       display: flex;
       justify-content: center;
-      gap: 10px;
-      max-width: 700px;
-      margin: 0 auto;
+      margin-top: 20px;
     }
-
-    input {
-      flex-grow: 1;
+    .input-container input {
       padding: 10px;
+      width: 80%;
       font-size: 16px;
-      background-color: #333;
-      border: 1px solid #555;
-      color: #fff;
+      margin-right: 10px;
       border-radius: 5px;
+      border: none;
     }
-
-    button {
+    .input-container button {
       padding: 10px 20px;
-      background-color: #00fff7;
-      color: black;
-      font-weight: bold;
+      background-color: #cc5500;
+      color: #ffffff;
       border: none;
       border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.2s;
     }
-
-    button:hover {
-      background-color: #00ccbb;
+    .input-container button:hover {
+      background-color: #b34700;
+    }
+    footer {
+      background-color: #111;
+      color: #aaaaaa;
+      padding: 15px 0;
+      font-size: 14px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
     }
   </style>
 </head>
 <body>
-  <h1>MEMEPEDIA AI Chatbot</h1>
-  <div id="chat"></div>
-
-  <div id="inputArea">
-    <input type="text" id="userInput" placeholder="Say something..." />
-    <button onclick="sendMessage()">Send</button>
-  </div>
+  <header>
+    <h1>Memepedia AI Chatbot</h1>
+    <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo">
+  </header>
+  <main>
+    <div class="chat-container">
+      <div class="messages-container" id="messages"></div>
+      <div class="input-container">
+        <input type="text" id="userMessage" placeholder="Type your message here...">
+        <button onclick="sendMessage()" class="button">Send</button>
+      </div>
+      <div id="loading" class="loading" style="display:none;">Bot is typing...</div>
+    </div>
+  </main>
+  <footer>
+    Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
+  </footer>
 
   <script>
-    const chatDiv = document.getElementById("chat");
-
-    function addMessage(text, sender) {
-      const messageDiv = document.createElement("div");
-      messageDiv.className = `message ${sender}`;
-      messageDiv.textContent = `${sender === "user" ? "You" : "Memepedia Bot"}: ${text}`;
-      chatDiv.appendChild(messageDiv);
-      chatDiv.scrollTop = chatDiv.scrollHeight;
-    }
+    const messagesContainer = document.getElementById('messages');
+    const userMessageInput = document.getElementById('userMessage');
+    const loadingIndicator = document.getElementById('loading');
 
     async function sendMessage() {
-      const input = document.getElementById("userInput");
-      const message = input.value.trim();
-      if (!message) return;
+        const userMessage = userMessageInput.value.trim();
+        if (userMessage) {
+            appendMessage(userMessage, 'user');
+            userMessageInput.value = '';
+            loadingIndicator.style.display = 'block';
 
-      addMessage(message, "user");
-      input.value = "";
-
-      try {
-        const response = await fetch("https://memepedia-backend.vercel.app/api/gemini-chat", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ message })
-        });
-
-        const data = await response.json();
-
-        if (!response.ok) {
-          addMessage(`Error: ${data.error}`, "bot");
-        } else {
-          const botReply = data.candidates?.[0]?.content?.parts?.[0]?.text || "No response from Memepedia Bot.";
-          addMessage(botReply, "bot");
+            try {
+                const response = await fetch('https://memepedia-backend.vercel.app/api/gemini-chat', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ message: userMessage })
+                });
+                const data = await response.json();
+                
+                if (data.error) {
+                    appendMessage('Something went wrong. Try again later.', 'bot');
+                } else {
+                    appendMessage(data.reply, 'bot');
+                }
+            } catch (error) {
+                appendMessage('Something went wrong. Try again later.', 'bot');
+                console.error('Error:', error);
+            } finally {
+                loadingIndicator.style.display = 'none';
+            }
         }
-      } catch (err) {
-        addMessage("Error: Something went wrong. Try again later.", "bot");
-        console.error(err);
-      }
+    }
+
+    function appendMessage(message, sender) {
+        const messageElement = document.createElement('div');
+        messageElement.classList.add('message');
+        messageElement.classList.add(sender === 'user' ? 'user-message' : 'bot-message');
+        
+        const author = document.createElement('div');
+        author.classList.add('author');
+        author.textContent = sender === 'user' ? 'You' : ':memepedia bot:';
+
+        const content = document.createElement('div');
+        content.classList.add('content');
+        content.textContent = message;
+
+        messageElement.appendChild(author);
+        messageElement.appendChild(content);
+
+        messagesContainer.appendChild(messageElement);
+        messagesContainer.scrollTop = messagesContainer.scrollHeight;  // Auto scroll to latest message
     }
   </script>
 </body>
