--- a/chatbot.html
+++ b/chatbot.html
@@ -124,6 +124,12 @@
       </div>
     </div>
   </main>
+  
+  <h2>This chatbot is based off Google Gemini and is hosted by Google</h2>
+  
+  <br> <br>
+  
+  
   <footer>
     Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
   </footer>
